# Pigeon

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  LICENSE  Minimal.runsettings  README.md  generateSolution.bat
.claude/: settings.local.json
Code/App/: App2D.cpp  CMakeLists.txt
Code/PigeonApp/: CMakeLists.txt
Code/PigeonLib/: CMakeLists.txt  Pigeon.h  Test.cpp  Test.h  pch.h
Code/PigeonLib/Pigeon/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Code/PigeonLib/Pigeon/Audio/: AudioDevice.cpp  AudioDevice.h  AudioDeviceSingletonComponent.h  AudioPlaybackSystem.cpp  AudioPlaybackSystem.h  AudioVolume.h  AudioVolumeSingletonComponent.h  AudioVolumeSystem.cpp  AudioVolumeSystem.h  EAudioCategory.h  PauseAudioRequestOneFrameComponent.h  PlayAudioRequestOneFrameComponent.h  ResumeAudioRequestOneFrameComponent.h  SetAudioVolumeRequestOneFrameComponent.h  SoundClip.cpp  SoundClip.h  StopAudioRequestOneFrameComponent.h
Code/PigeonLib/Pigeon/Core/: Application.cpp  Application.h  ApplicationEventComponent.h  CameraSystem.cpp  CameraSystem.h  Clock.h  ConfigLoaderSystem.cpp  ConfigLoaderSystem.h  Core.h  EWindowMode.h  EngineConfigSingletonComponent.h  EntryPoint.h  EventComponent.h  FileUtils.cpp  FileUtils.h  Font.cpp  Font.h  Input.h  InputComponents.h  InputLayer.cpp  InputLayer.h  InputStateSingletonComponent.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  KeyPressedEventComponent.h  KeyReleasedEventComponent.h  KeyTypedEventComponent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonPressedEventComponent.h  MouseButtonReleasedEventComponent.h  MouseMovedEventComponent.h  MouseScrolledEventComponent.h  OrthographicCameraComponent.h  OrthographicCameraController.cpp  (+18 more)
Code/PigeonLib/Pigeon/Diffusion/: DiffusionBackend.cpp  DiffusionBackend.h  DiffusionBackendSingletonComponent.h  DiffusionJob.h  DiffusionJobSingletonComponent.h  DiffusionSystem.cpp  DiffusionSystem.h  GenerateImageRequestOneFrameComponent.h  Image.cpp  Image.h  MattingBackend.cpp  MattingBackend.h  MattingBackendSingletonComponent.h  OpenPoseHint.cpp  OpenPoseHint.h  OpenPoseSkeleton.cpp  OpenPoseSkeleton.h  RasterizeOpenPoseHintRequestOneFrameComponent.h  RegisterGeneratedTextureRequestOneFrameComponent.h
Code/PigeonLib/Pigeon/ECS/: CheckedRegistryAccessor.h  Entity.h  System.h  World.cpp  World.h
Code/PigeonLib/Pigeon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Code/SandboxApp/: CMakeLists.txt  SampleUIComponent.h  SampleUISystem.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  imgui.ini  main.cpp  pch.h
Code/SandboxApp/Sandbox/: AnimationTransformRequestOneFrameComponent.h  AudioDebugPanelSystem.cpp  AudioDebugPanelSystem.h  AudioDemoStateSingletonComponent.h  AudioDemoSystem.cpp  AudioDemoSystem.h  CameraControlSystem.cpp  CameraControlSystem.h  CharacterControlSystem.cpp  CharacterControlSystem.h  CharacterTagComponent.h  CharacterTransformRequestOneFrameComponent.h  ConfigLoaderSystem.cpp  ConfigLoaderSystem.h  DebugControlsSingletonComponent.h  DebugPanelSystem.cpp  DebugPanelSystem.h  DialogueDemoSingletonComponent.h  DialogueDemoSystem.cpp  DialogueDemoSystem.h  ImageGenDemoIds.h  ImageGenDemoStateSingletonComponent.h  ImageGenDemoSystem.cpp  ImageGenDemoSystem.h  InputReadoutSystem.cpp  InputReadoutSystem.h  InputReadoutTagComponent.h  LabelComponent.h  LifetimeComponent.h  LifetimeSystem.cpp  LifetimeSystem.h  ModelSpinComponent.h  ModelSpinSystem.cpp  ModelSpinSystem.h  ModelSpinTransformRequestOneFrameComponent.h  QuadAnimationSystem.cpp  QuadAnimationSystem.h  QuadComponent.h  QuadRenderSystem.cpp  QuadRenderSystem.h  (+46 more)
Code/UT/: CMakeLists.txt  Test.cpp
Code/UT/UT_Audio/: AudioPlaybackSystemTest.cpp  AudioVolumeSystemTest.cpp  AudioVolumeTest.cpp
Code/UT/UT_Core/: CameraSystemTest.cpp  ConfigLoaderSystemTest.cpp  EntityTest.cpp  InputSystemTest.cpp  OrthographicCameraTest.cpp  ResourceManagerSystemTest.cpp  SaveDataSystemTest.cpp  UT_CameraTest.cpp  UT_ECSTest.cpp  UT_EventsTest.cpp  UT_InputTest.cpp  UT_LayerPropagationTest.cpp  UT_Renderer2DTest.cpp  UUIDTest.cpp  WindowConfigSystemTest.cpp  WorldTest.cpp
Code/UT/UT_Diffusion/: DiffusionBackendTest.cpp  DiffusionSystemTest.cpp  MattingBackendTest.cpp  OpenPoseHintTest.cpp  OpenPoseSkeletonTest.cpp
Code/UT/UT_Events/: UT_EventsTest.cpp
Code/UT/UT_Interface/: Dx11RendererAPITest.cpp  UT_Dx11RendererAPITest.cpp
Code/UT/UT_Layers/: UT_EventsTest.cpp  UT_LayerPropagationTest.cpp
Code/UT/UT_Renderer/: CameraSystemTest.cpp  FontTest.cpp  ModelTest.cpp  PerspectiveCameraTest.cpp  RenderTargetTest.cpp  Renderer2DSystemTest.cpp  Renderer3DSystemTest.cpp  SpriteAnimationSystemTest.cpp  SpriteRenderSystemTest.cpp  SpriteSheetTest.cpp  UT_Dx11RendererAPITest.cpp
Code/UT/UT_Sample/: UT_SampleTest.cpp
Code/UT/UT_Sandbox/: AudioDebugPanelSystemTest.cpp  AudioDemoSystemTest.cpp  CameraControlSystemTest.cpp  CharacterControlSystemTest.cpp  ConfigLoaderSystemTest.cpp  DebugPanelSystemTest.cpp  DialogueDemoSystemTest.cpp  ImageGenDemoSystemTest.cpp  InputReadoutSystemTest.cpp  LifetimeSystemTest.cpp  ModelSpinSystemTest.cpp  QuadAnimationSystemTest.cpp  QuadRenderSystemTest.cpp  QuadSpawnSystemTest.cpp  SampleUISystemTest.cpp  SaveDataDebugPanelSystemTest.cpp  SceneSetupSystemTest.cpp  SpriteRenderSystemTest.cpp  TextGenDemoSystemTest.cpp  TextRenderSystemTest.cpp  TransformResolveSystemTest.cpp  UIButtonSystemTest.cpp  UIButtonVisualSystemTest.cpp  UICloseSystemTest.cpp  UIScrollSystemTest.cpp  UIStatusSystemTest.cpp  WindowDebugPanelSystemTest.cpp
Code/UT/UT_TextGen/: TextGenBackendTest.cpp  TextGenSystemTest.cpp
Code/UT/UT_Transform/: TransformComposeSystemTest.cpp  TransformResolveSystemTest.cpp
Code/UT/UT_UI/: UIControlSystemTest.cpp  UIEventSystemTest.cpp  UIRenderSystemTest.cpp  UT_UISystemTest.cpp
Code/UT/UT_Window/: UT_WindowsWindowTest.cpp
Code/UT/Utils/: TestApp.cpp  TestApp.h
(+297 files in other folders)
